--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ulysse buonomo",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "csv2": "^0.1.1",
+    "request": "^2.81.0",
+    "unzip": "^0.1.11"
+  }
 }
